# django-lms

./: .gitignore  README.md  pyproject.toml
html-templates/: 404.html  index.html  login.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  student-lessons.html  student-payments.html  student-progress.html  students.html
lms/companies/: admin.py  apps.py  models.py
lms/companies/migrations/: 0001_initial.py  0002_company_is_active.py  0003_alter_company_is_active.py  0004_alter_company_options_alter_company_currency_and_more.py  0005_alter_company_discount.py  0006_company_price_plan.py  0007_remove_company_currency_remove_company_rate.py
lms/faq/: admin.py  apps.py  models.py  translation.py  urls.py  views.py
lms/faq/migrations/: 0001_initial.py  0002_alter_category_options_alter_question_options_and_more.py  0003_category_title_en_category_title_ru_and_more.py  (+2 more)
lms/lms/: middleware.py  settings.py  urls.py
lms/pages/: admin.py  forms.py  models.py  translation.py  urls.py  views.py
lms/pricing/: admin.py  apps.py  models.py
lms/school/: admin.py  apps.py  forms.py  models.py  services.py  urls.py  views.py
lms/settings/: admin.py  models.py
lms/siteapp/: admin.py  apps.py  context_processors.py  models.py  signals.py  urls.py  views.py
lms/static/admin/: style.css  (+2 more)
lms/templates/: 403.html  404.html  500.html
lms/transactions/: admin.py  apps.py  forms.py  models.py  translation.py  urls.py  views.py
lms/users/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
(+158 files in other folders)
